--- a/style.css
+++ b/style.css
@@ -1094,7 +1094,7 @@ hr {
   }
 
   .gallery3 {
-    gap: 0.8em; /* kurangi gap antar kolom */
+    gap: 0.2em; /* kurangi gap antar kolom */
   }
 }
 
@@ -1109,8 +1109,11 @@ hr {
   }
 
   .gallery3 {
-    gap: 0.5em;
+    display: flex;   /* wajib */
+    justify-content: center;
+    gap: 1 px;     /* default gap */
   }
+  
 }
 
 /* Responsif untuk footer */
@@ -1147,4 +1150,3 @@ hr {
     height: 25px;
   }
 }
-
